[package]
name = "ethereum_canister_backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
helios_client = { workspace = true }
helios_config = { workspace = true }
helios_common = { workspace = true }
#execution = { workspace = true }

candid = "0.9.2"
# ethers-core = { version = "2.0.8", default-features = false }
getrandom = { version = "0.2.10", features = ["custom"] }
ic-cdk = "0.10.0"
# ic-cdk-timers = "0.4"                                         # Feel free to remove this dependency if you don't need timers
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand = "0.8.5"
thiserror = "1.0.44"
