[package]
name = "ethereum_canister_backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
helios_client = { workspace = true }
helios_config = { workspace = true }
helios_common = { workspace = true }

candid = "0.9.2"
getrandom = { version = "0.2.10", features = ["custom"] }
ic-cdk = "0.10.0"
ic-logger = "0.1.0"
log = "0.4.19"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand = "0.8.5"
thiserror = "1.0.44"
